--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -13,18 +13,18 @@ hugoblox:
   # ────────────────────────────────────────────────────────────────────────────
   identity:
     # Site name - shown in navbar, footer, copyright, and browser title by default
-    name: "Your Name"
+    name: "Jonas Nicodemus"
     # Legal entity for copyright notices (defaults to name if not set)
     organization: ""
     # Schema.org type for structured data
     type: person                        # person | organization | local_business
     # Short tagline displayed on your site
-    tagline: ""
+    tagline: Half Mathematician Half Engineer
     # Site meta description for search engines and social sharing
-    description: "The highly-customizable Hugo Academic theme powered by HugoBlox Kit. Easily create your personal academic website."
+    description: Website of Jonas Nicodemus | PhD in applied mathematics | PostDoc at Karlsruhe Institute of Technology"
     # Social accounts (used for meta tags like Twitter Cards)
-    social:
-      twitter: "LoreLabs_"              # Twitter/X handle for Twitter Cards (without @)
+    # social:
+    #   twitter: "j__nicodemus"              # Twitter/X handle for Twitter Cards (without @)
 
   # ────────────────────────────────────────────────────────────────────────────
   # THEME
@@ -62,7 +62,7 @@ hugoblox:
     # Font: 'sans' (Inter), 'serif' (Roboto Slab), or 'native' (system fonts)
     font: "sans"
     # Size: 'sm', 'md', 'lg', or 'xl' (affects base font size and scale)
-    size: "md"
+    size: "sm"
 
   # ────────────────────────────────────────────────────────────────────────────
   # LAYOUT
@@ -70,9 +70,9 @@ hugoblox:
   # ────────────────────────────────────────────────────────────────────────────
   layout:
     # Border radius: 'none', 'sm', 'md', 'lg', or 'full'
-    radius: "md"
+    radius: "sm"
     # Spacing density: 'compact', 'comfortable', or 'spacious'
-    spacing: "comfortable"
+    spacing: "compact"
     # Avatar shape in author profiles
     avatar_shape: circle                # circle | square | rounded
 
@@ -83,7 +83,7 @@ hugoblox:
   header:
     enable: true
     # Header style variant
-    style: navbar                       # navbar | navbar-simple | minimal
+    style: minimal                       # navbar | navbar-simple | minimal
     # Stick to top on scroll
     sticky: true
     # Menu alignment
@@ -94,10 +94,10 @@ hugoblox:
     theme_picker: true
     language_switcher: true
     # Call-to-action button
-    cta:
-      enable: false
-      text: ""
-      url: ""
+    # cta:
+    #   enable: false
+    #   text: ""
+    #   url: ""
 
   # ────────────────────────────────────────────────────────────────────────────
   # FOOTER
@@ -157,7 +157,7 @@ hugoblox:
   content:
     # Math rendering
     math:
-      enable: false
+      enable: true
     # Table of contents
     toc:
       enable: true
@@ -231,8 +231,8 @@ hugoblox:
   # Source code repository for "Edit this page" links
   # ────────────────────────────────────────────────────────────────────────────
   repository:
-    enable: false
-    url: ""                             # e.g., https://github.com/username/repo
+    enable: true
+    url: "https://github.com/Jonas-Nicodemus/Jonas-Nicodemus.github.io"   # e.g., https://github.com/username/repo
     branch: main
     content_dir: content
 
