--- a/data/authors/me.yaml
+++ b/data/authors/me.yaml
@@ -1,116 +1,107 @@
-schema: hugoblox/author/v1
-slug: me
+schema: "hugoblox/author/v1"
+slug: "me"
 is_owner: true
 name:
-  display: Dr. Alex Johnson
-  given: Alex
-  family: Johnson
-  alternate: ''  # Example: 王伟
-  pronunciation: ''  # Example: Wáng Wěi
-  pronouns: he/him
+  display: "Jonas Nicodemus"
+  given: "Jonas"
+  family: "Nicodemus"
+  alternate: ""
+  pronunciation: ""
+  pronouns: ""
 postnominals:
-  - PhD
-  - MIEEE
+  - "Dr. rer. nat."
 status:
-  icon: "☕️"
-role: Senior AI Research Scientist
-bio: |
-  Alex Johnson is a Senior AI Research Scientist at Meta AI. His research
-  has been published in top conferences like NeurIPS and ICML, with over
-  10,000 citations. Alex is passionate about pushing the boundaries of AI
-  while ensuring ethical development.
-
+  icon: "🚀"
+role: "PostDoc"
+bio: "Greetings! I hold a PhD in Applied Mathematics with a focus on systems and control theory, optimization, and data-driven methods. 
+Previously, I studied Engineering Cybernetics, which gives me a strong background bridging mathematical theory and engineering practice.\n"
 affiliations:
-  - name: Meta AI
-    url: https://ai.meta.com/
-
+  - name: "Karlsruhe Institute of Thechnology"
+    url: "https://ianm.math.kit.edu/index.php"
 links:
-  - icon: at-symbol
-    url: mailto:alex.johnson@example.com
-    label: E-mail Me
-  - icon: brands/x
-    url: https://x.com/example
-  - icon: brands/github
-    url: https://github.com/example
-  - icon: brands/linkedin
-    url: https://www.linkedin.com/in/example/
-  - icon: academicons/google-scholar
-    url: https://scholar.google.com/citations?user=example
-  - icon: academicons/orcid
-    url: https://orcid.org/0000-0002-1825-0097
-
+  - icon: "envelope"
+    url: "mailto:jonas.nicodemus@icloud.com"
+    label: "E-mail Me"
+  # - icon: "brands/x"
+  #   url: "https://x.com/example"
+  - icon: "brands/github"
+    url: "https://github.com/Jonas-Nicodemus"
+  - icon: "brands/linkedin"
+    url: "https://www.linkedin.com/in/jonas-nicodemus-a34931209/"
+  - icon: "academicons/google-scholar"
+    url: "https://scholar.google.com/citations?user=kUWX7doAAAAJ"
+  - icon: "academicons/orcid"
+    url: "https://orcid.org/0000-0002-6734-9253"
 interests:
-  - Large Language Models
-  - Computer Vision
-  - Reinforcement Learning
-  - AI Ethics
-
+  - "Control Systems"
+  - "Model Order Reduction"
+  - "Scientific Machine Learning"
 education:
-  - degree: PhD Computer Science
-    institution: Stanford University
-    start: 2015-09-01
-    end: 2019-06-30
-    summary: |
-      Thesis on scaling laws for neural language models. Published 5 papers in NeurIPS and ICML.
-    button:
-      text: Download dissertation
-      url: /resume.pdf
-      icon: hero/arrow-down-tray
-  - degree: MS Computer Science
-    institution: Carnegie Mellon University
-    start: 2013-09-01
-    end: 2015-05-31
-  - degree: BS Computer Science
-    institution: MIT
-    start: 2009-09-01
-    end: 2013-05-31
-
+  - degree: "PhD Applied Mathematics"
+    institution: "University of Stuttgart"
+    start: "2021-07"
+    end: "2025-12"
+    summary: "
+    Efficient surrogate modelling with guarantees.
+    \n
+    Dissertation title: \"Applied optimization techniques for port-Hamiltonian systems\"
+    "
+    # button:
+    #   text: "Download dissertation"
+    #   url: "/JNicodemus-thesis.pdf"
+    #   icon: "hero/arrow-down-tray"
+  - degree: "M.Sc. Engineering Cybernetics"
+    institution: "University of Stuttgart"
+    grade: 1.9
+    summary: "Master thesis title: \"Application of Physics Informed Neural Networks for the Approximation of
+    Differential Equations in the Field of Rigid Body Dynamics\""
+    start: "2018-05"
+    end: "2021-05"
+  - degree: "B.Sc. Engineering Cybernetics"
+    institution: "University of Stuttgart"
+    grade: 2.6
+    summary: "Bachelor thesis title: \"Path Planning with Collision Avoidance for Multiple-Link Manipulators\""
+    start: "2014-10"
+    end: "2018-05"
 experience:
-  - role: Senior AI Research Scientist
-    org: Meta AI
-    start: 2020-01-01
-    summary: |
-      Leading research on multimodal AI systems. Contributed to Llama 2 and other open-source models.
-    button:
-      text: View portfolio
-      url: /
-      icon: hero/arrow-down-tray
-  - role: AI Research Intern
-    org: OpenAI
-    start: 2019-06-01
-    end: 2019-12-31
-    summary: |
-      Worked on GPT-3 scaling. Co-authored paper on prompt engineering.
-
-skills:
-  - name: Technical Skills
-    items:
-      - label: Python
-        level: 5
-      - label: Machine Learning
-        level: 5
-      - label: Cloud Computing
-        level: 4
-  - name: Research & Communication
-    items:
-      - label: Academic Writing
-        level: 5
-      - label: Conference Presentations
-        level: 4
-      - label: Grant Proposals
-        level: 4
-
+  - role: "PostDoc"
+    org: "Karlsruhe Institute of Technology"
+    start: "2026-01"
+  - role: "Research Associate"
+    org: "University of Stuttgart, Institute of Engineering and Computational Mechanics"
+    start: "2015-04"
+    end: "2021-05"
+    summary: "Tutor in Technical Mechanics I-III and Implementation of a Machine Learning driven Model Order
+      Reduction framework\n"
+  - role: "Intern/Working Student"
+    org: "Bosch SoftTec GmbH"
+    start: "2018-10"
+    end: "2020-02"
+    summary: "Software Engineer in the field of Map Matching, Microservices and Cloud Development.\n"
+  - role: "Working Student"
+    org: "Robert Bosch Start-up GmbH"
+    start: "2014-11"
+    end: "2016-11"
+    summary: "Programming of tools for the automation of forklifts (C++, C) and laboratory work.\n"
+# skills:
+#   - name: "Technical Skills"
+#     items:
+#       - label: "Python/Julia"
+#         level: 5
+#       - label: "Machine Learning"
+#         level: 5
+#       - label: "Cloud Computing"
+#         level: 4
+#   - name: "Research & Communication"
+#     items:
+#       - label: "Academic Writing"
+#         level: 5
+#       - label: "Conference Presentations"
+#         level: 5
 languages:
-  - name: English
+  - name: "German"
     level: 5
-    label: Native
-  - name: Spanish
-    level: 4
-    label: Fluent
-
-awards:
-  - title: Best Paper Award
-    awarder: NeurIPS
-    date: "2022-12-01"
-    summary: Awarded for groundbreaking work on efficient training of large models.
-    icon: hero/trophy
+    label: "Native"
+  - name: "English"
+    level: 5
+    label: "Fluent"
